tests/negative/test_macro_null_invoke.orb
fnc main () () {
    eval (sym x:(mac ()));
    x;
};